// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SVG Icon renders fine 1`] = `
<svg
  className="icon-svg icon-svg-cloud icon-svg-size-md icon-svg-type-normal image coral large"
>
  <use
    xlinkHref="#svg-cloud"
  />
</svg>
`;

exports[`components/SVG SVG renders fine 1`] = `
<svg
  className="image"
>
  <use
    xlinkHref="#svg-image"
  />
</svg>
`;
